Fix blurry canvas on high-density displays

--- a/drawing.css
+++ b/drawing.css
@@ -2,6 +2,8 @@
     position: fixed;
     top: 0;
     left: 0;
+    width: 100vw;
+    height: 100vh;
     z-index: 9999997;
     cursor: crosshair;
 }
